fix scrollbars hiding contact content in windows browsers

--- a/css/landing.css
+++ b/css/landing.css
@@ -284,7 +284,7 @@ div.landing h2 {
     font-size: 10px;
     height: 13px;
     text-shadow: 0px 0px 5px #000;
-    overflow-x: scroll;
+    overflow-y: auto;
 }
 
 #pat >.profCont > .profLeft > .profilePhoto > img {
